# vision_evaluation_tools

./: .gitignore  AGENTS.md  LICENSE  README.md  confront_using_rotation_and_trasl.py  depth_save.py  evaluate.py  helpers.py  qualitative.py  requirements.txt  utils.py
Extract images from bags/: config.yaml  ros2_image_extraction.py
Extract images from bags/RGBD/: export_rgbd.launch
Extract images from bags/stereo/: requirements.txt  save_stereo.py  save_stereo_config.yaml
catkin_ws/src/get_traj/: CMakeLists.txt  package.xml  setup.py  traj_os2_zed_Lab_fast.json  traj_os3.json  traj_os3_zed_Lab_fast.json
catkin_ws/src/get_traj/launch/: get_traj_os2.launch  get_traj_os3.launch
catkin_ws/src/get_traj/nodes/: main.py
catkin_ws/src/image_loader_kitti/: CMakeLists.txt  package.xml
catkin_ws/src/image_loader_kitti/launch/: load_image_zed.launch  load_images.launch
catkin_ws/src/image_loader_kitti/src/: load_images.cc  load_images_zed.cc
kitti_tools/cpp/: build.sh  evaluate_odometry.cpp  evaluate_odometry_avg.cpp  print_gt.cpp
sfm_evaluation_tools/: gnss_to_csv.py  horn_method.py  rtk_gnss_to_csv.py  rtk_sfm_alignment.py  sfm_to_csv.py
sfm_evaluation_tools/cpp/: evaluate_odometry.cpp  evaluate_odometry_avg.cpp
sfm_evaluation_tools/cpp/data/odometry/poses/: linea.txt  sp.txt
sfm_evaluation_tools/transformations/: align_path_to_gt.py  align_slam_to_gt.py
