<?xml version="1.0"?>
<package format="2">
  <name>get_traj</name>
  <version>0.0.1</version>
  <description>This package is a template.</description>
  <maintainer email="driverless.division@firenzerace.it">FRT Driverless Division</maintainer>

  <license>WTFPL</license>
  <!-- Here is an example of dependencies you can include, they have to be the same as "setup.py" and "CMakeLists.txt" -->
  <buildtool_depend>catkin</buildtool_depend> <!-- This dependency is mandatory for all packages -->
  
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  
  <export></export>
</package>
